--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -7,7 +7,7 @@
         <div class="container">
             <h5>Settings & Schedule</h5>
             <div class="form-area">
-                <fieldset [disabled]="showIsPausedButton && !testDetails.isPaused">
+                <fieldset [disabled]="testDetails.isLaunched && !testDetails.isPaused">
                     <div class="form-group">
                         <label>Time Duration (mins)</label><em class="danger-text h4">*</em>
                         <input type="text" class="form-control small-width" [(ngModel)]="testDetails.duration" name="Duration" placeholder="00" #Duration="ngModel" required pattern="^(0*[1-9])\d{0,3}?$" (keyup)="isWarningTimeValid()" />
@@ -34,13 +34,13 @@
                         <label>IP Restrictions</label>
                         <div class="ip-add-field" *ngFor="let ip of testDetails.testIpAddress; let i= index">
                             <input type="text" class="form-control small-width" id="From" name="ip_{{i}}" placeholder="IP Address {{i+1}}" (keyup)="IpAddressAdded(ip.ipAddress);showErrorMessage(ip)" (focus)="IpAddressAdded(ip.ipAddress)" #From=ngModel [(ngModel)]="ip.ipAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                            <em class="material-icons" *ngIf="!(showIsPausedButton && !testDetails.isPaused)" (click)="removeIpAddress(i,ip.id,ip.ipAddress)">close</em>
+                            <em class="material-icons" *ngIf="!(testDetails.isLaunched && !testDetails.isPaused)" (click)="removeIpAddress(i,ip.id,ip.ipAddress)">close</em>
                             <div class="errors-container">
                                 <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP address in correct format.</span>
                                 <span class="error-msg" *ngIf="ip.isErrorMessageVisible">Add IP Address or remove this field.</span>
                             </div>
                         </div>
-                        <button md-mini-fab type="button" [disabled]="showIsPausedButton && !testDetails.isPaused || !isIpAddressAdded" (click)="addIpFields()"><md-icon>add</md-icon></button>
+                        <button md-mini-fab type="button" [disabled]="testDetails.isLaunched && !testDetails.isPaused || !isIpAddressAdded" (click)="addIpFields()"><md-icon>add</md-icon></button>
                     </div>
                     <div class="form-group">
                         <label>Browser Tolerance</label>
@@ -115,7 +115,7 @@
                     </div>
 
                 </fieldset>
-                <create-test-footer  [isFocusLostNull]="isFocusLostNull" [loader]="!loader" [showIsPausedButton]="showIsPausedButton" [isRelaunched]="isRelaunched" [testDetails]="testDetails" (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails,$event)" (pauseTest)="pauseTest()" (resumeTest)="resumeTest()" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime" [isIpAddressAdded]="isIpAddressAdded"></create-test-footer>
+                <create-test-footer  [isFocusLostNull]="isFocusLostNull" [loader]="!loader" [testDetails]="testDetails" (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails,$event)" (pauseTest)="pauseTest()" (resumeTest)="resumeTest()" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime" [isIpAddressAdded]="isIpAddressAdded"></create-test-footer>
             </div>
         </div>
     </form>
