removed detailed excel button

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -34,17 +34,15 @@
                     <option value="4">Unfinished Test ({{unfinishedTestCount}})</option>
                     <option value="star">Starred Candidates ({{starredCandidateCount}})</option>
                 </select>
-                <button type="button" class="btn visible-lg-inline-block" (click)="downloadTestBasicDetails()" *ngIf="!noCandidateFound">Download Excel</button>
                 <button type="button" class="btn visible-lg-inline-block" (click)="downloadTestReportPdf()" *ngIf="!noCandidateFound">Download PDF</button>
-                <button type="button" class="btn visible-lg-inline-block" (click)="getExcelDetails()" *ngIf="!noCandidateFound ">Download Detailed Report</button>
+                <button type="button" class="btn visible-lg-inline-block" (click)="getExcelDetails()" *ngIf="!noCandidateFound ">Download Excel</button>
                 <button type="button" class="btn visible-lg-inline-block" (click)="generateReportForUnfinishedTest()" *ngIf="showGenerateReportButton && !noCandidateFound">Generate Report</button>
             </div>
             <a class="pull-right back-link mt10" [routerLink]="['/tests']">< back</a>
         </div>
         <div class="hidden-lg mt15">
-            <button type="button" class="btn" (click)="downloadTestBasicDetails()" *ngIf="!noCandidateFound">Download Excel</button>
             <button type="button" class="btn" (click)="downloadTestReportPdf()" *ngIf="!noCandidateFound">Download PDF</button>
-            <button type="button" class="btn" (click)="getExcelDetails()" *ngIf="!noCandidateFound ">Download Detailed Report</button>
+            <button type="button" class="btn" (click)="getExcelDetails()" *ngIf="!noCandidateFound ">Download Excel</button>
             <button type="button" class="btn" (click)="generateReportForUnfinishedTest()" *ngIf="showGenerateReportButton && !noCandidateFound">Generate Report</button>
         </div>
         <div class="grid-container" *ngIf="!noCandidateFound">
