--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
@@ -59,7 +59,7 @@
             </div>
             <div class="actions-area">
                 <button type="button" class="btn" (click)="cancelButtonClicked()">Cancel</button>
-                <button type="submit" *ngIf="!isEditQuestion" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || difficultyLevelSelected === 'default' || categoryName === 'default' ||!isOptionSelected() || isTwoOptionSame ">Save</button>
+                <button type="submit" *ngIf="!isEditQuestion" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || difficultyLevelSelected === 'default' || categoryName === 'default' ||!isOptionSelected() || isTwoOptionSame || isButtonClicked ">Save</button>
                 <button type="submit" *ngIf="isEditQuestion" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || !isOptionSelected()">Update</button>
             </div>
         </form>
