--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -13,6 +13,12 @@
             </div>
         </div>
     </div>
+    <!--<div class="test-status">
+        <div class="container">
+            <h5>Estimated Test Completion Time: <span class="theme-text">12:30:15</span></h5>
+            <h5 class="theme-text">This test is completed.</h5>
+        </div>
+    </div>-->
     <div class="container" *ngIf="!isAnyCandidateExist">
         <div class="report-title-block clearfix">
             <div class="pull-left">
