--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -6,7 +6,7 @@
     <md-dialog-content>
         <div class="form-group">
             <label>Section Name</label><em class="danger-text h4">*</em>
-            <input type="text" class="form-control" id="categoryName" (keyup.enter)="onEnter(category)" [(ngModel)]="category.categoryName" (keyup)="changeErrorMessage()" name="categoryName" #categoryName="ngModel" maxlength="150" placeholder="Ex. General Knowledge" required />
+            <input type="text" class="form-control" id="categoryName" (keyup.enter)="onEnter(category)" [(ngModel)]="category.categoryName" (keyup)="changeErrorMessage()" name="categoryName" #categoryName="ngModel" maxlength="150" placeholder="Ex. General Knowledge" required defaultSelect/>
             <div class="errors-container">
                 <span *ngIf="isCategoryNameExist" class="error-msg">{{errorMessage}}</span>
                 <span *ngIf="categoryName.errors && categoryName.dirty" [hidden]="!categoryName.errors.required" class="error-msg">Required</span>
