Removed unnecessary ids from the respective htmls.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -11,7 +11,7 @@
         <md-dialog-content>
             <div class="form-group">
                 <label>Current Password</label><em class="danger-text h4">*</em>
-                <input type="password" class="form-control" [(ngModel)]="user.oldPassword" name="oldpassword" #oldpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" id="oldpassword" defaultSelect/>
+                <input type="password" class="form-control" [(ngModel)]="user.oldPassword" name="oldpassword" #oldpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" defaultSelect/>
                 <div class="errors-container">
                     <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched) && oldpassword.errors.required' class='error-msg'>Please enter your current password.</span>
                     <span class='error-msg' *ngIf="errorCorrection">{{errorMesseage}}</span>
