--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-multiple-answer/questions-single-multiple-answer.html
@@ -8,7 +8,7 @@
             <h5 *ngIf="isSingleAnswerQuestion">Single Answer Question</h5>
             <h5 *ngIf="!isSingleAnswerQuestion">Multiple Answer Question</h5>
         </div>
-        <form (ngSubmit)="saveSingleMultipleAnswerQuestion(singleMultipleAnswerQuestion)" #singleMultipleAnswerQuestionForm="ngForm">
+        <form (ngSubmit)="saveSingleMultipleAnswerQuestion(singleMultipleAnswerQuestion)" #singleMultipleAnswerQuestionForm="ngForm" onsubmit="saveBtn.disabled = true; editBtn.disabled = true; return true;">
             <div class="form-fields">
                 <div class="form-group">
                     <app-tinymce [(ngModel)]="singleMultipleAnswerQuestion.question.questionDetail" id="question" #question="ngModel" name="questionDetail" required></app-tinymce>
@@ -59,8 +59,8 @@
             </div>
             <div class="actions-area">
                 <button type="button" class="btn" (click)="cancelButtonClicked()">Cancel</button>
-                <button type="submit" *ngIf="!isEditQuestion" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || difficultyLevelSelected === 'default' || categoryName === 'default' ||!isOptionSelected() || isTwoOptionSame " (click)="stopMultipleClick($event)">Save</button>
-                <button type="submit" *ngIf="isEditQuestion" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || !isOptionSelected()" (click)="stopMultipleClick($event)">Update</button>
+                <button type="submit" *ngIf="!isEditQuestion" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || difficultyLevelSelected === 'default' || categoryName === 'default' ||!isOptionSelected() || isTwoOptionSame" id="saveBtn">Save</button>
+                <button type="submit" *ngIf="isEditQuestion" class="btn btn-primary" [disabled]="singleMultipleAnswerQuestionForm.invalid || !isOptionSelected()" id="editBtn">Update</button>
             </div>
         </form>
 
