Fixed bug related to diable editing of test when attendees exist for a particular test and also closing of random question selection dialog box on pressing enter key.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/random-question-selection-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/random-question-selection-dialog.html
@@ -7,7 +7,7 @@
     <md-dialog-content>
       <div class="form-group">
         <label>Please enter the number of questions you want to select:</label>
-        <input type="text" class="form-control" [(ngModel)]="data.numberOfQuestions" required pattern="^[0-9]*$" name="noOfQuestions" #noOfQuestions="ngModel" (keyup)="isNumberOfQuestionsEnteredValid(data.numberOfQuestions)" defaultSelect />
+        <input type="text" class="form-control" [(ngModel)]="data.numberOfQuestions" required pattern="^[0-9]*$" name="noOfQuestions" #noOfQuestions="ngModel" (keyup)="isNumberOfQuestionsEnteredValid(data.numberOfQuestions)" defaultSelect (keyup.enter)="onEnter(data.numberOfQuestions)"/>
         <div class="errors-container">
           <span class="error-msg" *ngIf="noOfQuestions.dirty && !noOfQuestions.valid && noOfQuestions.errors.required">Required</span>
           <span class="error-msg" *ngIf="noOfQuestions.dirty && !noOfQuestions.valid && noOfQuestions.errors.pattern">You are allowed to enter positive integer values without space.</span>
