--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -13,7 +13,7 @@
         <div class="blocks-area">
             <div class="row">
                 <div class="col-md-5ths col-sm-4">
-                    <div class="create-test-block" (click)="createTestDialog()">
+                    <div e2e="create-test-block" class="create-test-block" (click)="createTestDialog()">
                         <em class="material-icons">add</em>
                         <h5>Create New Test</h5>
                     </div>
