--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
@@ -14,7 +14,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['tests']">Tests</a></li>
+                    <li [routerLinkActive]="['active']"><a e2e="test-btn" href="#" class="h5" [routerLink]="['tests']">Tests</a></li>
                     <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['questions']">Questions</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
