--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -11,7 +11,7 @@
     <h5 *ngIf="!isAnyCategorySelectedForTest">In order to add questions, please select sections from <a href="#" [routerLink]="['/tests', testId,'sections']" class="theme-text">here</a></h5>
     <h5 *ngIf="isAnyCategorySelectedForTest && isEditTestEnabled">Select questions for each section</h5>
     <ng-container *ngFor="let category of testDetails.categoryAcList; let k=index">
-      <md2-accordion class="questions-selection" *ngIf="category.isSelect">
+      <md2-accordion e2e="select-questions-list" class="questions-selection" *ngIf="category.isSelect">
         <md2-accordion-tab class="collapsible-block">
           <md2-accordion-header class="collapsible-header clearfix" [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
             <div class="title-info h2 pull-left">
