Added some common programming mistakes made by beginners

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/tests.programming-guide.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/tests.programming-guide.html
@@ -19,6 +19,12 @@
       <li>Do <strong>not</strong> define your own <strong>Package Name</strong> in Object Oriented Programming language.</li>
       <li>Using third party library or making network calls through your code must be avoided.</li>
     </ol>
+    <h5 class="text-center">Common Mistakes</h5>        
+    <ol>
+      <li>Do <strong>not</strong> print anything other than things instructed in the question. Printing user messages like <code>Enter a number:</code>,<code>Enter value of x:</code>, etc. (until specified in the question) will result in wrong answer.</li>
+      <li>When printing result make sure you don't accidently print extra spaces however trailing newlines will be removed when evaluating.</li>
+      <li><strong>Submit</strong> your code to get your solution considered for scoring.</li>
+    </ol>
   </md-dialog-content>
   <md-dialog-actions>
     <button type="button" class="btn btn-primary" md-dialog-close>OK</button>
